fix notification translations & parentRoute error treenode -> stepset

--- a/src/Resources/app/administration/src/module/eccb-module/page/step-set/step-set-list/eccb-step-set-list.twig
+++ b/src/Resources/app/administration/src/module/eccb-module/page/step-set/step-set-list/eccb-step-set-list.twig
@@ -13,7 +13,7 @@
 
 
         {% block eccb_step_set_list_smart_bar_actions %}
-            <template #smart-bar-actions>f
+            <template #smart-bar-actions>
                 {% block eccb_step_set_list_smart_bar_actions_add %}
                     <sw-button :routerLink="{ name: 'eccb.plugin.create' }" variant="primary">
                         {{ $tc('eccb.sequence.addSequence') }}
@@ -35,10 +35,6 @@
 
             {% endblock %}
         </template>
-
-
-
-
     </sw-page>
 
 {% endblock %}
