Add prices, price calculation, selection, filters, selection removal

--- a/src/Resources/app/administration/src/module/eccb-module/page/step-set/step-set-detail/step-set-detail.twig
+++ b/src/Resources/app/administration/src/module/eccb-module/page/step-set/step-set-detail/step-set-detail.twig
@@ -39,11 +39,12 @@
                             v-model="stepSet.name">
                     </sw-text-field>
 
-                    <sw-text-field
+
+                    <sw-text-editor
+                            type="textarea"
                             :label="$tc('eccb.field.description')"
-                            v-model="stepSet.description"
-                    >
-                    </sw-text-field>
+                            v-model="stepSet.description">
+                    </sw-text-editor>
 
 
                     <eccb-media-field
