--- a/src/Resources/app/administration/src/module/eccb-module/page/tree-node/tree-node-detail/tree-node-detail.twig
+++ b/src/Resources/app/administration/src/module/eccb-module/page/tree-node/tree-node-detail/tree-node-detail.twig
@@ -168,6 +168,29 @@
                             :mediaFolderName="'Candy Bags'"
                     >
                     </eccb-media-field>
+
+                    <sw-checkbox-field
+                            v-if="itemCard"
+                            style="display: inline-block; margin-right: 2em"
+                            :label="$tc('eccb.itemCard.showPrice')"
+                            v-model="itemCard.showPrice"></sw-checkbox-field>
+
+                    <sw-single-select
+                            v-if="products.length"
+                            :options="productOptions"
+                            labelValue="label"
+                            valueProperty="value"
+                            :placeholder="$tc('eccb.itemCard.addProduct')"
+                            :label="$tc('eccb.itemCard.product')"
+                            :value="itemCard.productId"
+                            @change="changeProduct"
+                            @select-expanded="getProductList"
+                            @search="searchProduct"
+                            required
+                    >
+                    </sw-single-select>
+
+
                 </sw-card>
 
 
