--- a/src/Resources/app/administration/src/module/eccb-module/page/tree-node/tree-node-detail/tree-node-detail.scss
+++ b/src/Resources/app/administration/src/module/eccb-module/page/tree-node/tree-node-detail/tree-node-detail.scss
@@ -19,6 +19,10 @@
     display: flex;
     align-items: center;
   }
+
+  .eccb-product-link {
+    text-decoration: none;
+  }
 }
 
 //.eccb-tree-node-detail {
