--- a/src/Resources/app/administration/src/module/eccb-module/page/tree-node/tree-node-detail/tree-node-detail.twig
+++ b/src/Resources/app/administration/src/module/eccb-module/page/tree-node/tree-node-detail/tree-node-detail.twig
@@ -175,6 +175,15 @@
                             :label="$tc('eccb.itemCard.showPrice')"
                             v-model="itemCard.showPrice"></sw-checkbox-field>
 
+                        <router-link v-if="itemCard.product"
+                                     class="eccb-product-link"
+                                     :to="{ name: 'sw.product.detail', params: { id: itemCard.product.id } }"
+                                     :style="{ 'color': '#00A1FF' }">
+                            <sw-icon name="default-web-link" small></sw-icon>&nbsp;
+                            {{ itemCard.product.name }}
+                        </router-link>
+
+
                     <sw-single-select
                             v-if="products.length"
                             :options="productOptions"
@@ -313,7 +322,7 @@
 
         <template #sidebar>
             <sw-sidebar>
-                <sw-sidebar-item  ref="sidebar" :title="$tc('eccb.field.image')" icon="default-object-image">
+                <sw-sidebar-item ref="sidebar" :title="$tc('eccb.field.image')" icon="default-object-image">
                     <div class="image-container">
                         <img v-if="itemCard && itemCard.media && itemCard.media.url && treeNode.item.type === 'card'"
                              class="image"
