change step sequence description p to div

--- a/src/Resources/views/storefront/page/eccb-detail.html.twig
+++ b/src/Resources/views/storefront/page/eccb-detail.html.twig
@@ -30,7 +30,7 @@
                 <div class="col-lg-8 col-md-7 col-12">
                     <div class="card-body">
                         <h1>{{ entry.translated.name }}</h1>
-                        <p class="card-text ec-entity-description">{{ entry.translated.description|raw }}</p>
+                        <div class="card-text ec-entity-description">{{ entry.translated.description|raw }}</div>
                     </div>
                 </div>
             </div>
