remove shadow, fix card load behaviour on double tap with debouncing

--- a/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/Resources/app/storefront/src/scss/base.scss
@@ -66,9 +66,9 @@
           text-decoration: underline;
         }
 
-        -webkit-box-shadow: 1px 1px 20px 0px rgba(145, 143, 145, 1);
-        -moz-box-shadow: 1px 1px 20px 0px rgba(145, 143, 145, 1);
-        box-shadow: 1px 1px 20px 0px rgba(145, 143, 145, 1);
+        //-webkit-box-shadow: 1px 1px 20px 0px rgba(145, 143, 145, 1);
+        //-moz-box-shadow: 1px 1px 20px 0px rgba(145, 143, 145, 1);
+        //box-shadow: 1px 1px 20px 0px rgba(145, 143, 145, 1);
 
       }
     }
